syntax = "proto3";

package com.web.rpc.core.protocol;

option java_package = "com.web.rpc.core.protocol.proto";
option java_multiple_files = true;

// RPC请求消息
message RpcRequestProto {
  string request_id = 1;
  string service_name = 2;
  string method_name = 3;
  string group = 4;
  string version = 5;
  map<string, string> headers = 6;
  repeated bytes parameter_values = 7;
  repeated string parameter_types = 8;
  string trace_id = 9;
  int64 timestamp = 10;
  bool one_way = 11;
}

// RPC响应消息
message RpcResponseProto {
  string request_id = 1;
  int32 status_code = 2;
  bytes result = 3;
  string error_message = 4;
  bytes error_details = 5;
  int64 timestamp = 6;
}

// RPC统一消息格式
message RpcMessageProto {
  int32 magic_number = 1;
  int32 version = 2;
  int32 message_type = 3;
  int32 serialization_type = 4;
  int32 compression_type = 5;
  int64 request_id = 6;
  bytes data = 7;
}
